# ShopFront

./: .env.sample  .gitignore  .isort.cfg  .pylintrc  README.md  app.py  catalog.html  category.html  contacts.html  index.html  mypy.ini  pyproject.toml  requirements.txt
blog/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_alter_blogpost_views_count.py  0003_alter_blogpost_options.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: categories.json  products.json
catalog/management/commands/: fill_products.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_remove_contact_name_contact_contact_type_and_more.py  0004_alter_contact_options_remove_contact_created_at_and_more.py
config/: settings.py  urls.py
css/: style.css
static/css/: style.css
static/js/: script.js
templates/: base.html  catalog.html  category.html  contacts.html  index.html
templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  post_manage_list.html
templates/catalog/: add_product.html  product_detail.html
templates/includes/: product_card.html  sidebar.html
