[tool.poetry]
name = "shopfront"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.1.3"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"
anyio = "==4.10.0"
asgiref = "==3.9.1"
blinker = "==1.9.0"
cachecontrol = "==0.14.3"
cleo = "==2.1.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
